--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "mazipanneh@gmail.com"
-          git config --local user.name "mazipan"
+          git config --local user.email "letsmoon4u@gmail.com"
+          git config --local user.name "letsmoon4u"
           git add -A
           
           arr[0]="chore(bot): 😂 auto commit"
